src/styles/content.scss
.marktone {
  .marktone-textarea {
    display: block;
    width: 100%;
    height: 300px;
    padding: 8px 12px;
    box-sizing: border-box;

    font-family: monospace;
    font-size: 1rem;

    resize: vertical;

    border: 1px solid #e3e7e8;
    box-shadow: 4px 4px 12px #f5f5f5 inset, -4px -4px 12px #f5f5f5 inset;
  }

  //
  // autocomplete
  //
  .marktone-autocomplete-dropdown {
    background-color: #fff;
    border-radius: 6px;
    padding-top: 6px;
    padding-bottom: 6px;
    border: 1px solid rgba(0, 0, 0, .15);
    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .08);

    .marktone-autocomplete-list {
      border: none;
      box-shadow: none;

      .marktone-autocomplete-item {
        border: none;
        font-size: 14px;

        .mention-candidate {
          display: flex;
          align-items: center;
          height: 32px;
          padding: 0 16px;

          .avatar {
            display: inline-block;
            height: 20px;
            width: 20px;
            line-height: 20px;

            .avatar-image {
              display: block;
              border-radius: 3px;
              height: 100%;
              width: 100%;
            }
          }

          .name {
            margin-left: 8px;

            .display-name {
              font-weight: 700;
            }
          }
        }
      }
    }
  }
}

